--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>제품 상세보기</title>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
   <link th:href="@{/css/detail.css}" rel="stylesheet">
 </head>
 <body>
