--- a/src/main/resources/templates/token.html
+++ b/src/main/resources/templates/token.html
@@ -6,18 +6,39 @@
 </head>
 <body>
 <script th:inline="javascript">
-    // Thymeleaf가 accessToken 값을 주입합니다.
-    var token = /*[[${accessToken}]]*/ "";
+    // 현재 URL에서 path 부분을 가져오기
+    const path = window.location.pathname;
 
-    console.log(token);
-    if (token) {
-        // access token을 localStorage에 저장
-        localStorage.setItem("accessToken", token);
-        // 토큰 저장 후 대시보드 페이지로 이동
+    // '/token/' 이후의 값(즉, message 값)을 추출하기
+    const message = path.split('/')[3];
+    const type = path.split('/')[4];
 
-        window.location.href = '/';
-    } else {
-        console.error("access token이 전달되지 않았습니다.");
+    console.log(message);
+    console.log(type);
+
+    if(message === "ForbiddenToken"){
+        alert("허용하지 않는 로그인 방식입니다.\n다른 방식으로 로그인 해주세요.");
+        window.location.href = '/member/login';
+    }else if(message === "Forbidden"){
+        alert("서버에서 요청이 거부되었습니다.\n다시 로그인 해주세요.");
+        window.location.href = '/member/login';
+    }else if(message === "AlreadyExists"){
+        alert(type + "로 회원가입 되어있습니다.\n" + type + "로 다시 로그인해주세요.");
+        window.location.href = '/member/login';
+    }else{
+        // Thymeleaf가 accessToken 값을 주입합니다.
+        var token = /*[[${accessToken}]]*/ "";
+
+        console.log(token);
+        if (token) {
+            // access token을 localStorage에 저장
+            localStorage.setItem("accessToken", token);
+            // 토큰 저장 후 대시보드 페이지로 이동
+
+            window.location.href = '/';
+        } else {
+            console.error("access token이 전달되지 않았습니다.");
+        }
     }
 </script>
 </body>
