--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -20,6 +20,7 @@
             <li><a href="#" class="order-now">Order Now</a></li>
             <li><button class="order-now" id="logoutBtn">logout</button></li>
             <li><button class="order-now" id="deleteBtn">deleteAcc</button></li>
+            <li><button class="order-now" id="profileBtn">profile</button></li>
         </ul>
     </nav>
 </header> <!-- 카테고리 내비게이션 -->
