--- a/src/main/resources/templates/update-profile.html
+++ b/src/main/resources/templates/update-profile.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/profile.js}"></script>
+    <script th:src="@{/js/updateProfile.js}"></script>
     <link th:href="@{/css/profile.css}" rel="stylesheet">
 </head>
 <body>
 <header>
     <div class="header-container">
         <h1 id="welcome-message"></h1>
+        <p>프로필 수정 중...</p>
     </div>
     <div class="group-btn">
         <button class="update-btn" id="updateProfileBtn">수정하기</button>
@@ -27,47 +28,35 @@
         <div class="info-section">
             <div class="user-profile">
                 <P>이름 : </P>
-                <P id="user_name"></P>
-            </div>
-            <div class="user-profile">
-                <P>포인트 : </P>
-                <P id="user_point"></P>
+                <input type="text" id="user_name" />
             </div>
             <div class="user-profile">
                 <P>이메일 : </P>
-                <P id="user_email"></P>
+                <input type="text" id="user_email" />
+            </div>
+            <div class="user-profile">
+                <label for="user_emailyn">이메일 수신여부 </label>
+                <input type="checkbox" id="user_emailyn">
             </div>
             <div class="user-profile">
                 <P>연락처 : </P>
-                <P id="user_phone"></P>
+                <input type="text" id="user_phone" />
             </div>
             <div class="user-profile">
-                <P>가입일 : </P>
-                <P id="created_date"></P>
-            </div>
-            <div class="user-profile">
-                <P>가입경로 : </P>
-                <P id="user_type"></P>
+                <label for="user_phoneyn">연락처 수신여부 </label>
+                <input type="checkbox" id="user_phoneyn">
             </div>
             <div class="user-profile">
                 <P>메인 주소 : </P>
-                <P id="main_address"></P>
+                <input type="text" id="main_address" />
             </div>
             <div class="user-profile">
                 <P>추가 주소 1 : </P>
-                <P id="sub_address1"></P>
+                <input type="text" id="sub_address1" />
             </div>
             <div class="user-profile">
                 <P>추가 주소 2 : </P>
-                <P id="sub_address2"></P>
-            </div>
-        </div>
-        <div class="info-section">
-            <div class="delivery-info">
-                <p>배달 현황 나올 예정입니다</p>
-            </div>
-            <div class="order-info">
-                <p>주문 내역 나올 예정입니다</p>
+                <input type="text" id="sub_address2" />
             </div>
         </div>
     </div>
