--- a/src/main/resources/templates/update-profile.html
+++ b/src/main/resources/templates/update-profile.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/emailVerify.js}"></script>
+    <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/updateProfile.js}"></script>
     <link th:href="@{/css/profile.css}" rel="stylesheet">
 </head>
@@ -27,36 +30,70 @@
     <div class="detail-container">
         <div class="info-section">
             <div class="user-profile">
-                <P>이름 : </P>
-                <input type="text" id="user_name" />
+                <label for="user_name">이름</label>
+                <input type="text" id="user_name" placeholder="이름을 입력하세요" required>
             </div>
             <div class="user-profile">
-                <P>이메일 : </P>
-                <input type="text" id="user_email" />
+                <label for="user_email">이메일</label>
+                <input type="text" id="user_email" placeholder="이메일을 입력하세요" required>
+                <button type="button" id="email-submit">인증하기</button>
+            </div>
+            <div class="user-profile" id="email-code-group" style="display:none;">
+                <label for="email_code">인증 코드</label>
+                <input type="text" id="email_code" placeholder="코드를 입력하세요">
+                <button type="button" id="email-verify">확인</button>
+                <span id="timer">03:00</span>
             </div>
             <div class="user-profile">
                 <label for="user_emailyn">이메일 수신여부 </label>
                 <input type="checkbox" id="user_emailyn">
             </div>
             <div class="user-profile">
-                <P>연락처 : </P>
-                <input type="text" id="user_phone" />
+                <label for="user_phone">전화번호</label>
+                <input type="text" id="user_phone" placeholder="전화번호를 입력하세요" required>
             </div>
             <div class="user-profile">
                 <label for="user_phoneyn">연락처 수신여부 </label>
                 <input type="checkbox" id="user_phoneyn">
             </div>
             <div class="user-profile">
-                <P>메인 주소 : </P>
-                <input type="text" id="main_address" />
+                <label for="main_address_base">현재 선택된 주소</label>
+                <input type="text" id="main_address_base" placeholder="주소를 입력하세요" required>
+                <!-- zonecode 저장용 hidden field -->
+                <input type="hidden" id="main_postcode">
+                <button type="button" id="mainAddress-kakao">주소 찾기</button>
+                <p>아파트의 경우 동, 호수까지 입력해주세요</p>
+                <div class="map" style="display:none; width:100%; height:300px; margin-top:10px;"></div>
+                <input type="hidden" id="main_latitude" name="latitude">
+                <input type="hidden" id="main_longitude" name="longitude">
+                <label for="main_address_detail">상세주소</label>
+                <input type="text" id="main_address_detail" placeholder="상세주소를 입력하세요">
             </div>
             <div class="user-profile">
-                <P>추가 주소 1 : </P>
-                <input type="text" id="sub_address1" />
+                <label for="main_address_base">추가 주소 1</label>
+                <input type="text" id="sub_address1_base" placeholder="주소를 입력하세요" required>
+                <!-- zonecode 저장용 hidden field -->
+                <input type="hidden" id="sub1_postcode">
+                <button type="button" id="subAddress1-kakao">주소 찾기</button>
+                <p>아파트의 경우 동, 호수까지 입력해주세요</p>
+                <div class="map" style="display:none; width:100%; height:300px; margin-top:10px;"></div>
+                <input type="hidden" id="sub1_latitude" name="latitude">
+                <input type="hidden" id="sub1_longitude" name="longitude">
+                <label for="sub1_address_detail">상세주소</label>
+                <input type="text" id="sub1_address_detail" placeholder="상세주소를 입력하세요">
             </div>
             <div class="user-profile">
-                <P>추가 주소 2 : </P>
-                <input type="text" id="sub_address2" />
+                <label for="main_address_base">추가 주소 2</label>
+                <input type="text" id="sub2_address_base" placeholder="주소를 입력하세요" required>
+                <!-- zonecode 저장용 hidden field -->
+                <input type="hidden" id="sub2_postcode">
+                <button type="button" id="subAddress2-kakao">주소 찾기</button>
+                <p>아파트의 경우 동, 호수까지 입력해주세요</p>
+                <div class="map" style="display:none; width:100%; height:300px; margin-top:10px;"></div>
+                <input type="hidden" id="sub2_latitude" name="latitude">
+                <input type="hidden" id="sub2_longitude" name="longitude">
+                <label for="sub2_address_detail">상세주소</label>
+                <input type="text" id="sub2_address_detail" placeholder="상세주소를 입력하세요">
             </div>
         </div>
     </div>
