--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -22,9 +22,14 @@
 
 <div class="buyer-info">
     <label>주문자 이름: <input type="text" id="name"></label><br/>
-    <label>주소: <input type="text" id="mainAddress"></label>
-    <label>서브 주소: <input type="text" id="sub_address_1"></label>
-    <button type="button" onclick="execDaumPostcode()">주소 검색</button><br/>
+    <div class="address-group">
+        <label>주소:
+            <input type="text" id="mainAddress">
+        </label>
+        <button type="button" onclick="execDaumPostcode()">주소 검색</button>
+    </div>
+    <br/>
+    <label>상세 주소: <input type="text" id="subAddress1"></label>
     <label>이메일: <input type="text" id="email"></label><br/>
     <label>전화번호: <input type="text" id="phone"></label><br/>
     <label>결제수단:
