--- a/src/main/resources/templates/token.html
+++ b/src/main/resources/templates/token.html
@@ -35,7 +35,7 @@
             localStorage.setItem("accessToken", token);
             // 토큰 저장 후 대시보드 페이지로 이동
 
-            window.location.href = '/';
+            window.location.href = '/home';
         } else {
             console.error("access token이 전달되지 않았습니다.");
         }
