--- a/src/main/resources/static/css/storeList.css
+++ b/src/main/resources/static/css/storeList.css
@@ -75,14 +75,20 @@ tbody tr:hover {
 .logout-btn {
     background-color: #dc3545; /* 붉은색 */
 }
+.button-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
 
 /* 로그아웃 버튼을 우측 상단으로 이동 */
-.logout-btn-position {
+/*.logout-btn-position {
     position: absolute;
     top: 20px;
     right: 20px;
     padding: 10px 20px;
-}
+}*/
 
 /* 버튼 호버 효과 */
 .btn:hover {
