--- a/src/main/resources/templates/store-detail.html
+++ b/src/main/resources/templates/store-detail.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>지점 상세</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/storeDetail.js"></script>
-    <link href="/css/storeDetail.css" rel="stylesheet">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/findAddress.js}"></script>
+    <script th:src="@{/js/storeDetail.js}"></script>
+    <link th:href="@{/css/storeDetail.css}" rel="stylesheet">
+
 </head>
 <body>
 <div class="storeDetail-container">
