--- a/src/main/resources/templates/store-list.html
+++ b/src/main/resources/templates/store-list.html
@@ -16,8 +16,10 @@
     <input id="hiddenStoreName" type="hidden">
 
     <h1 id="welcome-message">지점 목록</h1>
-    <a th:href="@{/store/register}" class="btn">지점 등록</a>
-    <button onclick="logout();" class="btn logout-btn logout-btn-position">로그아웃</button>
+    <div class="button-row">
+        <a th:href="@{/store/register}" class="btn">지점 등록</a>
+        <button onclick="logout();" class="btn logout-btn">로그아웃</button>
+    </div>
 
     <!-- 게시판 영역 -->
     <div id="board">
