--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -3,9 +3,11 @@
 <head>
     <title>메뉴 보기</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/menu/menuCustomerList.css}">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/menu/menuCustomerList.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/menu/menuCustomerList.css}">
 </head>
 <body>
 
