--- a/src/main/resources/templates/menu/menuEdit.html
+++ b/src/main/resources/templates/menu/menuEdit.html
@@ -4,8 +4,9 @@
     <title>메뉴 수정</title>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/menuEdit.js"></script>
-    <link href="/css/menuEdit.css" rel="stylesheet">
+    <script th:src="@{/js/common.js}"></script>
+    <script src="/js/menu/menuEdit.js"></script>
+    <link href="/css/menu/menuEdit.css" rel="stylesheet">
 </head>
 <body>
 <h1>메뉴 수정</h1>
