--- a/src/main/resources/templates/menu/menuForCustomer.html
+++ b/src/main/resources/templates/menu/menuForCustomer.html
@@ -3,9 +3,11 @@
 <head>
     <title id="pageTitle">메뉴 상세</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/menuForCustomer.css}">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script th:src="@{/js/menuForCustomer.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/menu/menuForCustomer.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/menu/menuForCustomer.css}">
 </head>
 <body>
 
