--- a/src/main/resources/templates/menu/breadEdit.html
+++ b/src/main/resources/templates/menu/breadEdit.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-  <script th:src="@{/js/breadEdit.js}"></script> <!-- 외부 JS 파일 링크 -->
-  <link th:href="@{/css/commonEdit.css}" rel="stylesheet">
+  <script th:src="@{/js/common.js}"></script>
+  <script th:src="@{/js/menu/breadEdit.js}"></script> <!-- 외부 JS 파일 링크 -->
+  <link th:href="@{/css/menu/commonEdit.css}" rel="stylesheet">
   <title>빵 정보 수정</title>
 </head>
 <body>
