--- a/src/main/resources/templates/menu/breadList.html
+++ b/src/main/resources/templates/menu/breadList.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/breadList.js}"></script>
-    <link th:href="@{/css/commonList.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/breadList.js}"></script>
+    <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
     <title>빵 목록</title>
 </head>
 <body>
