--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -3,7 +3,11 @@
 <head>
     <title>장바구니</title>
     <meta charset="UTF-8">
-    <link href="/css/cartList.css" rel="stylesheet"> <!-- Thymeleaf 제거 -->
+    <link href="/css/menu/cartList.css" rel="stylesheet"> <!-- Thymeleaf 제거 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/js/menu/cartList.js"></script>
+    <script th:src="@{/js/common.js}"></script>
+
 </head>
 <body>
 <div class="cart-container">
@@ -40,8 +44,6 @@
 </div>
 
 <!-- 외부 스크립트는 body 하단에 위치 -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/common.js"></script>
-<script src="/js/cartList.js"></script>
+
 </body>
 </html>
