--- a/src/main/resources/templates/menu/cheeseAdmin.html
+++ b/src/main/resources/templates/menu/cheeseAdmin.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
   <script th:src="@{/js/common.js}"></script>
-  <script th:src="@{/js/cheeseAdmin.js}"></script>
-  <link th:href="@{/css/commonAdmin.css}" rel="stylesheet">
+  <script th:src="@{/js/menu/cheeseAdmin.js}"></script>
+  <link th:href="@{/css/menu/commonAdmin.css}" rel="stylesheet">
   <title>치즈 정보 입력</title>
 </head>
 <body>
