--- a/src/main/resources/templates/menu/cheeseList.html
+++ b/src/main/resources/templates/menu/cheeseList.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/cheeseList.js}"></script>
-    <link th:href="@{/css/commonList.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/cheeseList.js}"></script>
+    <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
     <title>치즈 목록</title>
 </head>
 <body>
@@ -25,19 +25,19 @@
     </tr>
     </thead>
     <tbody id="cheeseTableBody">
-    <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.uid}"></td>
-        <td th:text="${cheese.cheeseName}"></td>
-        <td th:text="${cheese.calorie}"></td>
-        <td th:text="${cheese.price}"></td>
-        <td><img th:src="${cheese.img}" alt="치즈 이미지" width="50"></td>
-        <td th:text="${cheese.status}"></td>
-        <td>
-            <a th:href="@{/cheeses/edit(cheeseName=${cheese.cheeseName})}">수정</a>
-        </td>
-        <td>
-            <button class="delete-btn" th:data-cheesename="${cheese.cheeseName}">삭제</button>
-        </td>
+<!--    <tr th:each="cheese : ${cheeses}">-->
+<!--        <td th:text="${cheese.uid}"></td>-->
+<!--        <td th:text="${cheese.cheeseName}"></td>-->
+<!--        <td th:text="${cheese.calorie}"></td>-->
+<!--        <td th:text="${cheese.price}"></td>-->
+<!--        <td><img th:src="${cheese.img}" alt="치즈 이미지" width="50"></td>-->
+<!--        <td th:text="${cheese.status}"></td>-->
+<!--        <td>-->
+<!--            <a th:href="@{/cheeses/edit(cheeseName=${cheese.cheeseName})}">수정</a>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <button class="delete-btn" th:data-cheesename="${cheese.cheeseName}">삭제</button>-->
+<!--        </td>-->
     </tr>
     </tbody>
 </table>
