--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -4,9 +4,9 @@
     <title>커스텀 샌드위치</title>
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script th:src="@{/js/customCart.js}"></script>
+    <script th:src="@{/js/menu/customCart.js}"></script>
     <script th:src="@{/js/common.js}"></script>
-    <link th:href="@{/css/menuAdmin.css}" rel="stylesheet">
+    <link th:href="@{/css/menu/menuAdmin.css}" rel="stylesheet">
 </head>
 <body>
 <h2>커스텀 샌드위치</h2>
