--- a/src/main/resources/templates/menu/main.html
+++ b/src/main/resources/templates/menu/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>관리자 페이지</title>
     <script th:src="@{/js/common.js}"></script>
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/menu/main.css}">
 </head>
 <body>
 <div class="container">
