--- a/src/main/resources/templates/menu/materialEdit.html
+++ b/src/main/resources/templates/menu/materialEdit.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/materialEdit.js"></script> <!-- 외부 JS 파일 링크 -->
-    <link href="/css/commonEdit.css" rel="stylesheet">
+    <script th:src="@{/js/common.js}"></script>
+    <script src="/js/menu/materialEdit.js"></script> <!-- 외부 JS 파일 링크 -->
+    <link href="/css/menu/commonEdit.css" rel="stylesheet">
     <title>재료 정보 수정</title>
 </head>
 <body>
