--- a/src/main/resources/templates/menu/materialList.html
+++ b/src/main/resources/templates/menu/materialList.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/materialList.js}"></script>
-    <link th:href="@{/css/commonList.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/materialList.js}"></script>
+    <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
     <title>재료 목록</title>
 </head>
 <body>
@@ -25,19 +25,19 @@
     </tr>
     </thead>
     <tbody id="materialTableBody">
-    <tr th:each="material : ${materials}">
-        <td th:text="${material.uid}"></td>
-        <td th:text="${material.materialName}"></td>
-        <td th:text="${material.calorie}"></td>
-        <td th:text="${material.price}"></td>
-        <td><img th:src="${material.img}" alt="재료 이미지" width="50"></td>
-        <td th:text="${material.status}"></td>
-        <td>
-            <a th:href="@{/materials/edit(materialName=${material.materialName})}">수정</a>
-        </td>
-        <td>
-            <button class="delete-btn" th:data-materialname="${material.materialName}">삭제</button>
-        </td>
+<!--    <tr th:each="material : ${materials}">-->
+<!--        <td th:text="${material.uid}"></td>-->
+<!--        <td th:text="${material.materialName}"></td>-->
+<!--        <td th:text="${material.calorie}"></td>-->
+<!--        <td th:text="${material.price}"></td>-->
+<!--        <td><img th:src="${material.img}" alt="재료 이미지" width="50"></td>-->
+<!--        <td th:text="${material.status}"></td>-->
+<!--        <td>-->
+<!--            <a th:href="@{/materials/edit(materialName=${material.materialName})}">수정</a>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <button class="delete-btn" th:data-materialname="${material.materialName}">삭제</button>-->
+<!--        </td>-->
     </tr>
     </tbody>
 </table>
