--- a/src/main/resources/templates/menu/menuAdmin.html
+++ b/src/main/resources/templates/menu/menuAdmin.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/menuAdmin.js}"></script>
-    <link th:href="@{/css/menuAdmin.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/menuAdmin.js}"></script>
+    <link th:href="@{/css/menu/menuAdmin.css}" rel="stylesheet">
 </head>
 <body>
 <h2>메뉴 등록</h2>
@@ -65,8 +65,8 @@
 
     <label>상태:</label>
     <select name="status">
-        <option value="active">ACTIVE</option>
-        <option value="deleted">DELETED</option>
+        <option value="active">판매중</option>
+        <option value="deleted">품절</option>
     </select><br>
 
     <div class="form-actions">
