--- a/src/main/resources/templates/menu/menuList.html
+++ b/src/main/resources/templates/menu/menuList.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script th:src="@{/js/menuList.js}"></script>
-    <link th:href="@{/css/menuList.css}" rel="stylesheet">
+    <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/menu/menuList.js}"></script>
+    <link th:href="@{/css/menu/menuList.css}" rel="stylesheet">
     <title>메뉴 목록</title>
 </head>
 <body>
