--- a/src/main/resources/templates/menu/sauceList.html
+++ b/src/main/resources/templates/menu/sauceList.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/sauceList.js}"></script>
-    <link th:href="@{/css/commonList.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/sauceList.js}"></script>
+    <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
 
     <title>소스 목록</title>
 </head>
@@ -26,20 +26,20 @@
     </tr>
     </thead>
     <tbody id="sauceTableBody">
-    <tr th:each="sauce : ${sauces}">
-        <td th:text="${sauce.uid}"></td>
-        <td th:text="${sauce.sauceName}"></td>
-        <td th:text="${sauce.calorie}"></td>
-        <td th:text="${sauce.price}"></td>
-        <td><img th:src="${sauce.img}" alt="소스 이미지" width="50"></td>
-        <td th:text="${sauce.status}"></td>
-        <td>
-            <a th:href="@{/sauces/edit(sauceName=${sauce.sauceName})}">수정</a>
-        </td>
-        <td>
-            <button class="delete-btn" th:data-saucename="${sauce.sauceName}">삭제</button>
-        </td>
-    </tr>
+<!--    <tr th:each="sauce : ${sauces}">-->
+<!--        <td th:text="${sauce.uid}"></td>-->
+<!--        <td th:text="${sauce.sauceName}"></td>-->
+<!--        <td th:text="${sauce.calorie}"></td>-->
+<!--        <td th:text="${sauce.price}"></td>-->
+<!--        <td><img th:src="${sauce.img}" alt="소스 이미지" width="50"></td>-->
+<!--        <td th:text="${sauce.status}"></td>-->
+<!--        <td>-->
+<!--            <a th:href="@{/sauces/edit(sauceName=${sauce.sauceName})}">수정</a>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <button class="delete-btn" th:data-saucename="${sauce.sauceName}">삭제</button>-->
+<!--        </td>-->
+<!--    </tr>-->
     </tbody>
 </table>
 <br>
