--- a/src/main/resources/templates/menu/sideList.html
+++ b/src/main/resources/templates/menu/sideList.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/sideList.js}"></script>
-    <link th:href="@{/css/commonList.css}" rel="stylesheet">
+    <script th:src="@{/js/menu/sideList.js}"></script>
+    <link th:href="@{/css/menu/commonList.css}" rel="stylesheet">
 
     <title>사이드 목록</title>
 </head>
@@ -26,20 +26,20 @@
     </tr>
     </thead>
     <tbody id="sideTableBody">
-    <tr th:each="side : ${sides}">
-        <td th:text="${side.uid}"></td>
-        <td th:text="${side.sideName}"></td>
-        <td th:text="${side.calorie}"></td>
-        <td th:text="${side.price}"></td>
-        <td><img th:src="${side.img}" alt="사이드 이미지" width="50"></td>
-        <td th:text="${side.status}"></td>
-        <td>
-            <a th:href="@{/sides/edit(sideName=${side.sideName})}">수정</a>
-        </td>
-        <td>
-            <button class="delete-btn" th:data-sidename="${side.sideName}">삭제</button>
-        </td>
-    </tr>
+<!--    <tr th:each="side : ${sides}">-->
+<!--        <td th:text="${side.uid}"></td>-->
+<!--        <td th:text="${side.sideName}"></td>-->
+<!--        <td th:text="${side.calorie}"></td>-->
+<!--        <td th:text="${side.price}"></td>-->
+<!--        <td><img th:src="${side.img}" alt="사이드 이미지" width="50"></td>-->
+<!--        <td th:text="${side.status}"></td>-->
+<!--        <td>-->
+<!--            <a th:href="@{/sides/edit(sideName=${side.sideName})}">수정</a>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <button class="delete-btn" th:data-sidename="${side.sideName}">삭제</button>-->
+<!--        </td>-->
+<!--    </tr>-->
     </tbody>
 </table>
 <br>
