store update,delete

--- a/src/main/resources/templates/store-detail.html
+++ b/src/main/resources/templates/store-detail.html
@@ -15,8 +15,10 @@
 <div class="storeDetail-container">
     <h2>지점 상세 정보</h2>
     <form id="storeDetailForm">
-        <!-- uid를 숨겨놓기 -->
+        <!-- uid 및 위도 경도 숨겨놓기 -->
         <input type="hidden" id="uid">
+        <input type="hidden" id="store_latitude" >
+        <input type="hidden" id="store_longitude" >
 
         <div>
             <label>지점명:</label>
