--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -6,9 +6,9 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0a9cdd5535d7bb018489c5662b3b5ae"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/profile.js}"></script>
+    <script th:src="@{/js/auth/profile.js}"></script>
     <script th:src="@{/js/kakaoMobility.js}"></script>
-    <link th:href="@{/css/profile.css}" rel="stylesheet">
+    <link th:href="@{/css/auth/profile.css}" rel="stylesheet">
 </head>
 <body>
 <header>
