--- a/src/main/resources/templates/auth/sign-in.html
+++ b/src/main/resources/templates/auth/sign-in.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.js" crossorigin="anonymous"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/signIn.js}"></script>
-    <link th:href="@{/css/signIn.css}" rel="stylesheet">
+    <script th:src="@{/js/auth/signIn.js}"></script>
+    <link th:href="@{/css/auth/signIn.css}" rel="stylesheet">
     <title>로그인</title>
 </head>
 <body>
