--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -7,8 +7,8 @@
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/emailVerify.js}"></script>
-    <script th:src="@{/js/signUp.js}"></script>
-    <link th:href="@{/css/signUp.css}" rel="stylesheet">
+    <script th:src="@{/js/auth/signUp.js}"></script>
+    <link th:href="@{/css/auth/signUp.css}" rel="stylesheet">
     <title>회원가입</title>
 </head>
 <body>
