--- a/src/main/resources/templates/auth/update-profile.html
+++ b/src/main/resources/templates/auth/update-profile.html
@@ -8,8 +8,8 @@
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/emailVerify.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
-    <script th:src="@{/js/updateProfile.js}"></script>
-    <link th:href="@{/css/profile.css}" rel="stylesheet">
+    <script th:src="@{/js/auth/updateProfile.js}"></script>
+    <link th:href="@{/css/auth/profile.css}" rel="stylesheet">
 </head>
 <body>
 <header>
