--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -18,9 +18,6 @@
             <li><a href="about_us.html">About Us</a></li>
             <li><a href="help.html">Help</a></li>
             <li><a href="#" class="order-now">Order Now</a></li>
-            <li><button class="order-now" id="logoutBtn">logout</button></li>
-            <li><button class="order-now" id="deleteBtn">deleteAcc</button></li>
-            <li><button class="order-now" id="profileBtn">profile</button></li>
         </ul>
     </nav>
 </header> <!-- 카테고리 내비게이션 -->
@@ -41,6 +38,9 @@
         <input id="hiddenUserName" type="hidden">
 
         <h1 id="welcome-message"></h1>
+        <button class="order-now" id="logoutBtn">logout</button>
+        <li><button class="order-now" id="deleteBtn">deleteAcc</button>
+        <button class="order-now" id="profileBtn">profile</button>
     </div>
     <section class="menu-section"><h2>Burgers</h2>
         <div class="menu-items">
