--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <link rel="stylesheet" th:href="@{/css/order/order.css}">
-<!--    <script th:src="@{/js/common.js}"></script>-->
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/order/order.js}"></script>
 </head>
 <body>
