--- a/src/main/resources/templates/store-list.html
+++ b/src/main/resources/templates/store-list.html
@@ -28,6 +28,7 @@
             <tr>
                 <th>지점 번호</th>
                 <th>지점명</th>
+                <th>지점관리자</th>
                 <th>주소</th>
                 <th>우편코드</th>
                 <th>가입일</th>
