email verify & join update

--- a/src/main/resources/templates/order/custom-order.html
+++ b/src/main/resources/templates/order/custom-order.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>커스텀 샌드위치 만들기</title>
-    <link rel="stylesheet" href="/css/order/customOrder.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/order/customOrder.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/order/customOrder.css}">
+    <script th:src="@{/js/auth/profile.js}"></script>
+    <script th:src="@{/js/order/customOrder.js}"></script>
 </head>
 <body>
 <h1>커스텀 샌드위치 만들기</h1>
